Rename game in index.html

--- a/webbuild/index.html
+++ b/webbuild/index.html
@@ -99,7 +99,7 @@
         })();
     </script>
     <script type="module">
-        import init from './out/jam.js'
+      import init from './out/qualified_immunity.js'
         init();
     </script>
 </body>
